remove tag audio

--- a/index.html
+++ b/index.html
@@ -21,33 +21,34 @@
         </div>
         <div id="buttons">
             <button class="icon-buttons play" id="play-circle">
-                <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/play-circle.svg" alt="play circle">
+                <img src="/assets/play-circle.svg" alt="play circle">
             </button>
             <button class="icon-buttons pause hide" id="pause-circle">
-                <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/pause-circle.svg" alt="pause circle">
+                <img src="/assets/pause-circle.svg" alt="pause circle">
             </button>
             <button class="icon-buttons set" id="setTime">
-                <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/stopwatch.svg" alt="watch">
+                <img src="/assets/stopwatch.svg" alt="watch">
             </button>
             <button class="icon-buttons stop hide" id="stop-circle">
-                <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/stop-circle.svg" alt="stop watch">
+                <img src="/assets/stop-circle.svg" alt="watch">
             </button>
         </div>
     </main>
     <footer>
-        <audio class="music hide">
-            <source src="https://github.com/1felipeaac/focustimer-pomodoro/blob/main/midia/Frozen%20in%20Love%20-%20Aakash%20Gandhi.mp3" type="audio/mpeg">
+        <!-- <audio class="music hide" preload="none">
+            <source src="midia/Frozen in Love - Aakash Gandhi.mp3" type="audio/mpeg">
         </audio>
 
-        <audio class="alarm hide">
-            <source src="https://github.com/1felipeaac/focustimer-pomodoro/blob/main/midia/Mechanical%20Clock%20Ring.mp3" type="audio/mpeg">
-        </audio>
+        <audio class="alarm hide" preload="none">
+            <source src="midia/Mechanical Clock Ring.mp3" type="audio/mpeg">
+        </audio> -->
         <button class="icon-buttons medium" id="volume-medium">
-            <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/volume-medium.svg" alt="volume-medium">
+            <img src="/assets/volume-medium.svg" alt="volume-medium">
         </button>
         <button class="icon-buttons mute hide" id="volume-mute">
-            <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/volume-mute.svg" alt="volume-mute">
+            <img src="/assets/volume-mute.svg" alt="volume-mute">
         </button>
     </footer>
 </body>
 </html>
+
