--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         </div>
         <div id="buttons">
             <button class="icon-buttons play" id="play-circle">
-                <img src="https://github.com/1felipeaac/focustimer-pomodoro/blob/main/assets/play-circle.svg" alt="play circle">
+                <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/play-circle.svg" alt="play circle">
             </button>
             <button class="icon-buttons pause hide" id="pause-circle">
-                <img src="https://github.com/1felipeaac/focustimer-pomodoro/blob/main/assets/pause-circle.svg" alt="pause circle">
+                <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/pause-circle.svg" alt="pause circle">
             </button>
             <button class="icon-buttons set" id="setTime">
-                <img src="https://github.com/1felipeaac/focustimer-pomodoro/blob/main/assets/stopwatch.svg" alt="watch">
+                <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/stopwatch.svg" alt="watch">
             </button>
             <button class="icon-buttons stop hide" id="stop-circle">
-                <img src="https://github.com/1felipeaac/focustimer-pomodoro/blob/main/assets/stop-circle.svg" alt="watch">
+                <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/stop-circle.svg" alt="stop button">
             </button>
         </div>
     </main>
@@ -43,10 +43,10 @@
             <source src="midia/Mechanical Clock Ring.mp3" type="audio/mpeg">
         </audio> -->
         <button class="icon-buttons medium" id="volume-medium">
-            <img src="https://github.com/1felipeaac/focustimer-pomodoro/blob/main/assets/volume-medium.svg" alt="volume-medium">
+            <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/volume-medium.svg" alt="volume-medium">
         </button>
         <button class="icon-buttons mute hide" id="volume-mute">
-            <img src="https://github.com/1felipeaac/focustimer-pomodoro/blob/main/assets/volume-mute.svg" alt="volume-mute">
+            <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/volume-mute.svg" alt="volume-mute">
         </button>
     </footer>
 </body>
