--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <title>FocusTimer - Pomodoro</title>
 </head>
 <body>
+    <header>
+        <div id="focus"></div>
+    </header>
     <main>
         <div id="timer">
             <span id="minutes">00</span>
@@ -35,13 +38,6 @@
         </div>
     </main>
     <footer>
-        <!-- <audio class="music hide" preload="none">
-            <source src="midia/Frozen in Love - Aakash Gandhi.mp3" type="audio/mpeg">
-        </audio>
-
-        <audio class="alarm hide" preload="none">
-            <source src="midia/Mechanical Clock Ring.mp3" type="audio/mpeg">
-        </audio> -->
         <button class="icon-buttons medium" id="volume-medium">
             <img src="https://raw.githubusercontent.com/1felipeaac/focustimer-pomodoro/34de124b12b18d640205ab3e9c0214bc92fcbb6b/assets/volume-medium.svg" alt="volume-medium">
         </button>
