--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>FocusTimer - Pomodoro</title>
 </head>
 <body>
-    <header>
+    <header class="hide">
         <div id="focus"></div>
     </header>
     <main>
